--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <html>
-	<title>JS CLOCK</title>
-</html>
+
 <head>
+    <title>JS CLOCK</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="dynamic.js"></script>
 </head>
+
 <body>
+    <div class="clockFace">
+        <div class="hand hourHand">
+        </div>
+        <div class="hand minuteHand">
+        </div>
+        <div class="hand secondHand">
+        </div>
+    </div>
 </body>
+
+</html>
